--- a/practice/src/main/resources/application.properties
+++ b/practice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 chatgpt.url=https://api.openai.com/v1/chat/completions
-chatgpt.api.key=need to update while running
+chatgpt.api.key=need to add key
 chatgpt.model=gpt-3.5-turbo
 server.port=9000
